@@ -1,3 +1,13 @@
+Wed Mar 10 11:21:31 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/dds/Reader_T.h:
+        * connectors/dds4ccm/impl/dds/Reader_T.cpp:
+          Check whether DDS4CCM_USES_QUERY_CONDITION is defined and one.
+
+        * connectors/dds4ccm/tests/QueryFilter/Receiver/QueryFilter_Test_Receiver_exec.cpp:
+          Disabled getter test when DDS4CCM_USES_QUERY_CONDITION  is
+          not defined.
+
 Wed Mar 10 10:28:55 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * bin/ciao_tests.lst:
